# I don't really know why these two lines are needed!
CMAKE_MINIMUM_REQUIRED(VERSION 2.2)
PROJECT(PYINTERFACE)

include(${CMAKE_CURRENT_SOURCE_DIR}/FindSWIG.cmake) # this is slightly modified FindSWIG.cmake file -  had to tune it to work with OSX

FIND_PACKAGE(SWIG REQUIRED)

# INCLUDE(${SWIG_USE_FILE})
INCLUDE(UseSWIG)

FIND_PACKAGE(PythonLibs)
FIND_PACKAGE(PythonInterp)


SET(NUMPY_INCLUDE_DIR )
# searching for numpy include dir
EXEC_PROGRAM(${PYTHON_EXECUTABLE} ${CMAKE_SOURCE_DIR}/pyinterface ARGS NumpyHeader.py
      OUTPUT_VARIABLE NUMPY_INCLUDE_DIR)

MESSAGE ("THIS IS NUMPY_INCLUDE_DIR " ${NUMPY_INCLUDE_DIR})

INCLUDE_DIRECTORIES(${PYTHON_INCLUDE_PATH})
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR})
INCLUDE_DIRECTORIES(${CMAKE_BINARY_DIR}/include)
INCLUDE_DIRECTORIES(${NUMPY_INCLUDE_DIR})
INCLUDE_DIRECTORIES(${RR_SOURCE_PATH}/ThirdParty/rr-libstruct)



SET(PYINTERFACE_SRC_DIR ${CMAKE_CURRENT_SOURCE_DIR}/pyinterface)
SET(CMAKE_SWIG_FLAGS "")



IF(SWIG_FOUND)
    add_subdirectory(RoadRunner)    
ELSE(SWIG_FOUND)
    message("could not find SWIG in your system")
ENDIF(SWIG_FOUND)



#CMAKE_MINIMUM_REQUIRED(VERSION 2.2)
#PROJECT(PYINTERFACE)
